--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,11 @@
 MONGO_URI=mongodb://localhost:27017/ak_infradream_db
 
 JWT_SECRET=ctcxy
+
+# /server/.env
+
+# ... your other variables (MONGO_URI, JWT_SECRET) ...
+
+# Nodemailer / Email Credentials
+EMAIL_USER=Shunshinesolar25@gmail.com
+EMAIL_PASS=your_16_character_app_password
